addng user table and a relation to it and CRUD functionality
