# BE/src/modules/users/auth.route.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import * as controller from "./user.controller";
+
+const router = Router();
+
+router.post("/register", controller.register);
+router.post("/login", controller.login);
+
+export default router;
